updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a web dev student who's into Jesus, weightlifting, steak and peanut butter.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>With parents from Maryland, I grew up in Charlotte, NC and went to Grove City College in PA (Wolf Creek! Wolf Creek!) Now I've returned to the warmer climes of Charlotte NC.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, writing, trying new restaurants and dishes, hanging out with the ECPC crew...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'd love to split time between web development for a worthy cause and writing in the legacy of C.S. Lewis. What a gig that would be!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>CLT - east side...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The control of programming, the power of computing, the reach of the web...a lot to love.</p>
     </section>
 
     <footer id="footer">
